adjust colors of flow status icons, and PG status icons, and softened the warn palette. Fix background of status history charts in dark mode

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/ui/common/status-history/_status-history.component-theme.scss
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/ui/common/status-history/_status-history.component-theme.scss
@@ -47,10 +47,6 @@
         }
     }
 
-    #status-history-chart-control-container {
-        background-color: $canvas-primary-palette-900;
-    }
-
     :host ::ng-deep #status-history-chart-container text,
     #status-history-chart-control-container text {
         fill: $primary-palette-700;
